# snuscoach

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  pyproject.toml
.claude/: settings.local.json
snuscoach/: __main__.py  cli.py  coach.py  db.py  logger.py  prompts.py
tests/: conftest.py  test_cli.py  test_db.py  test_debrief.py  test_logger.py  test_meeting_edit.py  test_post.py  test_prep.py  test_series.py
