[project]
name = "snuscoach"
version = "0.1.0"
description = "Personal AI coach for navigating corporate office politics."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
snuscoach = "snuscoach.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["snuscoach*"]
